--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             }
 
         </textarea>
+        <select id="shape" onchange="InitShaders();">
+            <option selected>Triangle</option>
+            <option>Quad</option>
+        </select>
 
         <script src="js/webgl.js" defer>
         </script>
