change height and width

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <option selected>Triangle</option>
             <option>Quad</option>
         </select>
-
+        <div id="ui">Generate UI for geometry here!</div>
         <script src="js/webgl.js" defer>
         </script>
     </body>
