--- a/index.html
+++ b/index.html
@@ -15,10 +15,32 @@
             precision mediump float;
             attribute vec3 Pos;
             attribute vec3 Color;
+            uniform vec4 Angle;
             varying vec3 vertexColor;
 
             void main() {
-                gl_Position = vec4(Pos, 1.0);
+                float coX = cos(Angle.x);
+                float siX = sin(Angle.x);
+
+                
+                float coY = cos(Angle.y);
+                float siY = sin(Angle.y);
+
+                mat4 matX = mat4(
+                    vec4(1.0, 0.0, 0.0, 0.0),
+                    vec4(0.0, coX, siX, 0.0),
+                    vec4(0.0,-siX, coX, 0.0),
+                    vec4(0.0, 0.0, 0.0, 1.0));
+
+                mat4 matY = mat4(
+                    vec4(coY, 0.0,-siY, 0.0),
+                    vec4(0.0, 1.0, 0.0, 0.0),
+                    vec4(siY, 0.0, coY, 0.0),
+                    vec4(0.0, 0.0, 0.0, 1.0));
+                
+
+
+                gl_Position = matY * matX * vec4(Pos, 1.0);
                 vertexColor = Color;
             }
         </textarea>
