--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
             <option selected>Triangle</option>
             <option>Quad</option>
             <option>Box</option>
+            <option>Subdivided Plane</option>
+
         </select>
         <div id="ui">Generate UI for geometry here!</div>
         <script src="js/webgl.js" defer>
