--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
             <option selected>Triangle</option>
             <option>Quad</option>
             <option>Box</option>
-            <option>Subdivided Plane</option>
-
+            <option>Subdivided Box</option>
         </select>
         <div id="ui">Generate UI for geometry here!</div>
         <script src="js/webgl.js" defer>
