--- a/index.html
+++ b/index.html
@@ -51,15 +51,13 @@
             }
         </textarea>
         <select id="shape" onchange="InitShaders();">
-            <option selected>Triangle</option>
+            <option>Triangle</option>
             <option>Quad</option>
-            <option>Box</option>
+            <option selected>Box</option>
             <option>Subdivided Box</option>
         </select>
         <div id="ui">Generate UI for geometry here!</div>
         <script src="js/webgl.js" defer>
         </script>
     </body>
-
- 
 </html>
