--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title> webgl also black screen of death fml</title>
+        <title>Hello, WebGL</title>
     </head>
 
     <body onload="InitWebGL();">
