--- a/index.html
+++ b/index.html
@@ -8,60 +8,68 @@
     </head>
 
     <body onload="InitWebGL();">
-        <canvas id="gl" width="800px" height="600px">
-            eeeeeeeeeee
-        </canvas>
+        <header>
+            <h1> Hello, WebGL </h1>
+        </header>
 
-        <textarea id="vs" spellcheck="false">
-            precision mediump float;
-            attribute vec3 Pos;
-            attribute vec3 Color;
-            uniform vec4 Angle;
-            varying vec3 vertexColor;
+        <section>
+            <canvas id="gl" width="800px" height="600px">
+                eeeeeeeeeee
+            </canvas>
 
-            void main() {
-                float coX = cos(Angle.x);
-                float siX = sin(Angle.x);
+            <textarea id="vs" spellcheck="false">
+                precision mediump float;
+                attribute vec3 Pos;
+                attribute vec3 Color;
+                uniform vec4 Angle;
+                varying vec3 vertexColor;
 
-                float coY = cos(Angle.y);
-                float siY = sin(Angle.y);
+                void main() {
+                    float coX = cos(Angle.x);
+                    float siX = sin(Angle.x);
 
-                mat4 matX = mat4(
-                    vec4(1.0, 0.0, 0.0, 0.0),
-                    vec4(0.0, coX, siX, 0.0),
-                    vec4(0.0,-siX, coX, 0.0),
-                    vec4(0.0, 0.0, 0.0, 1.0));
+                    float coY = cos(Angle.y);
+                    float siY = sin(Angle.y);
 
-                mat4 matY = mat4(
-                    vec4(coY, 0.0,-siY, 0.0),
-                    vec4(0.0, 1.0, 0.0, 0.0),
-                    vec4(siY, 0.0, coY, 0.0),
-                    vec4(0.0, 0.0, 0.0, 1.0));
-                
-                gl_Position = matY * matX * vec4(Pos, 1.0);
-                vertexColor = Color;
-            }
-        </textarea>
+                    mat4 matX = mat4(
+                        vec4(1.0, 0.0, 0.0, 0.0),
+                        vec4(0.0, coX, siX, 0.0),
+                        vec4(0.0,-siX, coX, 0.0),
+                        vec4(0.0, 0.0, 0.0, 1.0));
 
-        <textarea id="fs" spellcheck="false">
-            precision mediump float;
-            varying vec3 vertexColor;
+                    mat4 matY = mat4(
+                        vec4(coY, 0.0,-siY, 0.0),
+                        vec4(0.0, 1.0, 0.0, 0.0),
+                        vec4(siY, 0.0, coY, 0.0),
+                        vec4(0.0, 0.0, 0.0, 1.0));
 
-            void main() {
-                gl_FragColor = vec4(vertexColor, 1.0);
-            }
-        </textarea>
+                    gl_Position = matY * matX * vec4(Pos, 1.0);
+                    vertexColor = Color;
+                }
+            </textarea>
 
-        <div class="container">        
-            <select id="shape" onchange="InitShaders();">
-                <option>Triangle</option>
-                <option>Quad</option>
-                <option selected>Box</option>
-                <option>Subdivided Box</option>
-            </select>
-            <div id="ui">Generate UI for geometry here!</div>
-        </div>
-        
+            <textarea id="fs" spellcheck="false">
+                precision mediump float;
+                varying vec3 vertexColor;
+
+                void main() {
+                    gl_FragColor = vec4(vertexColor, 1.0);
+                }
+            </textarea>
+
+            <div class="container">        
+                <select id="shape" onchange="InitShaders();">
+                    <option>Triangle</option>
+                    <option>Quad</option>
+                    <option selected>Box</option>
+                    <option>Subdivided Box</option>
+                </select>
+                <div id="ui">Generate UI for geometry here!</div>
+            </div>
+        </section>
+
+        <footer>
+        </footer>
         <script src="js/webgl.js" defer>
         </script>
     </body>
