--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
                 precision mediump float;
                 attribute vec3 Pos;
                 attribute vec3 Color;
+                attribute vec2 UV;
+                
                 uniform vec4 Angle;
+
                 varying vec3 vertexColor;
+                varying vec2 uv;
 
                 void main() {
                     float coX = cos(Angle.x);
@@ -45,15 +49,24 @@
 
                     gl_Position = matY * matX * vec4(Pos, 1.0);
                     vertexColor = Color;
+                    uv = UV;
                 }
             </textarea>
 
             <textarea id="fs" spellcheck="false">
                 precision mediump float;
+
+                uniform sampler2D Texture;
+                uniform vec4 Display;
+
                 varying vec3 vertexColor;
+                varying vec2 uv;
 
                 void main() {
-                    gl_FragColor = vec4(vertexColor, 1.0);
+                    float p = abs(Display.w);
+                    vec3 texture = texture2D(Texture, uv).rgb;
+                    vec3 color = vertexColor;
+                    gl_FragColor = vec4(mix(color, texture, p), 1.0);
                 }
             </textarea>
 
