--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
                     <option selected>Box</option>
                     <option>Subdivided Box</option>
                 </select>
+                <input type="checkbox" id="texture" onchange="Update();">
+                Show Texture<br>
                 <div id="ui">Generate UI for geometry here!</div>
             </div>
         </section>
