trying and failing to fix bug

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
             <div class="container">        
                 <select id="shape" onchange="InitShaders();">
-                    <option>Triangle</option>
+                    <option selected>Triangle</option>
                     <option>Quad</option>
-                    <option selected>Box</option>
+                    <option>Box</option>
                     <option>Subdivided Box</option>
                 </select>
                 <input type="checkbox" id="texture" onchange="Update();">
