texture working this time

--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
                 precision mediump float;
                 attribute vec3 Pos;
                 attribute vec3 Color;
+                attribute vec2 UV;
+                
                 uniform vec4 Angle;
+
                 varying vec3 vertexColor;
+                varying vec2 uv;
 
                 void main() {
                     float coX = cos(Angle.x);
@@ -45,25 +49,36 @@
 
                     gl_Position = matY * matX * vec4(Pos, 1.0);
                     vertexColor = Color;
+                    uv = UV;
                 }
             </textarea>
 
             <textarea id="fs" spellcheck="false">
                 precision mediump float;
+
+                uniform sampler2D Texture;
+                uniform vec4 Display;
+                
                 varying vec3 vertexColor;
+                varying vec2 uv;
 
                 void main() {
-                    gl_FragColor = vec4(vertexColor, 1.0);
+                    float p = abs(Display.w);
+                    vec3 texture = texture2D(Texture, uv).rgb;
+                    vec3 color = vertexColor;
+                    gl_FragColor = vec4(mix(color, texture, p), 1.0);
                 }
             </textarea>
 
             <div class="container">        
                 <select id="shape" onchange="InitShaders();">
-                    <option>Triangle</option>
+                    <option selected>Triangle</option>
                     <option>Quad</option>
-                    <option selected>Box</option>
+                    <option>Box</option>
                     <option>Subdivided Box</option>
                 </select>
+                <input type="checkbox" id="t" onchange="Update();">
+                Show Texture<br>
                 <div id="ui">Generate UI for geometry here!</div>
             </div>
         </section>
