let there be light

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                 </select>
                 <input type="checkbox" id="t" onchange="Update();">
                 Show Texture
-                <input type="color" id="l" value="#f6b73c" onchange="Update ()">Light Color<br>
+                <input type="color" id="light" value="#f6b73c" onchange="Update();">
+                Light Color<br>
                 <div id="ui">Generate UI for geometry here!</div>
             </div>
         </section>
