--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                     <option>Quad</option>
                     <option>Box</option>
                     <option>Subdivided Box</option>
+                    <option>Cylinder</option>
                 </select>
                 <input type="checkbox" id="t" onchange="Update();">
                 Show Texture
