--- a/index.html
+++ b/index.html
@@ -41,13 +41,15 @@
                         vec4(1.0, 0.0, 0.0, 0.0),
                         vec4(0.0, coX, siX, 0.0),
                         vec4(0.0,-siX, coX, 0.0),
-                        vec4(0.0, 0.0, 0.0, 1.0));
+                        vec4(0.0, 0.0, 0.0, 1.0)
+                    );
 
                     mat4 matY = mat4(
                         vec4(coY, 0.0,-siY, 0.0),
                         vec4(0.0, 1.0, 0.0, 0.0),
                         vec4(siY, 0.0, coY, 0.0),
-                        vec4(0.0, 0.0, 0.0, 1.0));
+                        vec4(0.0, 0.0, 0.0, 1.0)
+                    );
 
                     gl_Position = matY * matX * vec4(Pos, 1.0);
                     vertexColor = Color;
